--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,42 @@
+#Eclipse
+.settings
+.project
+.classpath
+
+
+*.iml
+#IntelliJ
+.idea
+
+#VisualStudio Code
+.vscode
+
+#iml
+*.iml
+
+#Netbeans
+**/nbproject/private/
+build/
+nbbuild/
+dist/
+nbdist/
+
+#Maven
+target
+
+#General
+bak
+
+#Firefox
+C:\\nppdf32Log\\debuglog.txt
+
+#Editors
+*.swp
+*.kate-swp
+
+#Git
+*.orig
+
+#iOS
 .DS_Store
+
