--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ languaje: java
 jdk:
 - oraclejdk8
 before install:
+- mvn install -DskipTests=true Dmaven.javadoc.skip=true -B -V
 - pip install --user codecov
 script:
 - mvn deploy --settings settings.xml
