--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,10 @@
 dist: trusty
 languaje: java
+install: true
 jdk:
 - oraclejdk8
 before install:
-- mvn install -DskipTests=true Dmaven.javadoc.skip=true -B -V
+- mvn install 
 - pip install --user codecov
 script:
 - mvn deploy --settings settings.xml
